--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.4.3"
+  },
+  "scripts": {
+    "build": "tailwindcss -i ./src/input.css -o ./public/styles.css --watch"
   }
 }
